ci(pre-validation): remove npm install flags

--- a/.github/workflows/pre-validation.yml
+++ b/.github/workflows/pre-validation.yml
@@ -35,4 +35,4 @@ jobs:
       - if: github.event_name == 'pull_request'
         name: Validate Commits
         shell: bash
-        run: npm install @commitlint/config-conventional --silent -g && npx commitlint --from ${{ github.event.pull_request.base.sha }} --verbose
+        run: npm install @commitlint/config-conventional && npx commitlint --from ${{ github.event.pull_request.base.sha }} --verbose
