chore(allcontributors): add commitConvention key to configuration

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,6 +11,7 @@
   "repoType": "github",
   "repoHost": "https://github.com",
   "skipCi": true,
+  "commitConvention": "angular",
   "contributors": [
     {
       "login": "Trenly",
