--- a/.github/workflows/fetch-old-versions.yml
+++ b/.github/workflows/fetch-old-versions.yml
@@ -1,6 +1,11 @@
 name: Fetch Old Versions
 on:
   workflow_dispatch:
+    inputs:
+      pkgid:
+        required: true
+        description: PackageIdentifier
+        type: string
 jobs:
   build:
     runs-on: windows-latest
@@ -9,6 +14,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Run FetchOldVersions.ps1
         shell: pwsh
-        run: Set-Location .\scripts; .\FetchOldVersions.ps1
+        run: Set-Location .\scripts; .\FetchOldVersions.ps1 -currentUpdate ${{ github.event.inputs.pkgid }}
         env:
           GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
