--- a/.github/workflows/pre-validation.yml
+++ b/.github/workflows/pre-validation.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          persist-credentials: false
       - name: JSON validation
         shell: pwsh
         run: |
@@ -29,7 +30,7 @@ jobs:
           (Get-ChildItem .\packages\ -Recurse -File | Get-Content -Raw | Where-Object { Test-Json -Json $_ -SchemaFile .\schema.json -ErrorAction SilentlyContinue } | ConvertFrom-Json | Where-Object { $_.skip -eq $false }).pkgid | Sort-Object | Out-File -Encoding UTF8 -Path .\packages.txt
           git config --local user.name 'winget-pkgs-automation-bot[bot]'
           git config --local user.email '93540089+winget-pkgs-automation-bot[bot]@users.noreply.github.com'
-          git commit -m "chore(packages.txt): add new packages" -- ./packages.txt
+          git commit -m "chore: update packages.txt" -- ./packages.txt
           git push https://x-access-token:$((Invoke-RestMethod -Method Post -Headers @{Authorization = "Bearer $($env:JWT_RB | ruby)"; Accept = "application/vnd.github.v3+json"} -Uri "https://api.github.com/app/installations/$env:THIS_ID/access_tokens").token)@github.com/vedantmgoyal2009/winget-pkgs-automation.git
         env:
           JWT_RB: ${{ secrets.JWT_RB }}
@@ -43,4 +44,3 @@ jobs:
         name: Validate Commits (pull request)
         shell: bash
         run:  npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
-
