--- a/packages/v/valinet.explorerpatcher.prerelease.json
+++ b/packages/v/valinet.explorerpatcher.prerelease.json
@@ -5,7 +5,7 @@
   "last_checked_tag": "55332230",
   "asset_regex": ".*setup.exe$",
   "is_prerelease": true,
-  "version_method": null,
+  "version_method": "($result.tag_name | Select-String -Pattern \"[0-9.]+\").Matches.Value",
   "use_package_script": false,
   "skip": false,
   "yamlcreate_autoupgrade": false,
