--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -13,12 +13,37 @@ jobs:
           persist-credentials: false
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
-      - run: gem install jwt openssl --no-doc
+          version: '3.0'
+      - name: Install dependencies
+        run: |
+          # Install jwt and openssl gems
+          gem install jwt openssl --no-doc
+
+          # Install winget and enable local manifests since microsoft/winget-cli#1453 is merged
+          Invoke-WebRequest -Uri 'https://aka.ms/Microsoft.VCLibs.x64.14.00.Desktop.appx' -OutFile 'VCLibs.appx'
+          Invoke-WebRequest -Uri 'https://github.com/microsoft/winget-cli/releases/download/v1.1.12701/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle' -OutFile 'winget.msixbundle'
+          Invoke-WebRequest -Uri 'https://github.com/microsoft/winget-cli/releases/download/v1.1.12701/9c0fe2ce7f8e410eb4a8f417de74517e_License1.xml' -OutFile 'license.xml'
+          Import-Module -Name Appx -UseWindowsPowerShell
+          Add-AppxProvisionedPackage -Online -PackagePath .\winget.msixbundle -DependencyPackagePath .\VCLibs.appx -LicensePath .\license.xml
+          # winget command on windows server -------------------
+          # Source: https://github.com/microsoft/winget-cli/issues/144#issuecomment-849108158
+          Install-Module NtObjectManager -Force # Install NtObjectManager module
+          $installationPath = (Get-AppxPackage Microsoft.DesktopAppInstaller).InstallLocation # Create reparse point
+          Set-ExecutionAlias -Path "C:\Windows\System32\winget.exe" -PackageName "Microsoft.DesktopAppInstaller_8wekyb3d8bbwe" -EntryPoint "Microsoft.DesktopAppInstaller_8wekyb3d8bbwe!winget" -Target "$installationPath\AppInstallerCLI.exe" -AppType Desktop -Version 3
+          explorer.exe "shell:appsFolder\Microsoft.DesktopAppInstaller_8wekyb3d8bbwe!winget"
+          # ----------------------------------------------------
+          winget settings --enable LocalManifestFiles
+          Write-Host " Successfully installed winget and enabled local manifests."
+
+          # Install powershell-yaml, required for YamlCreate.ps1
+          Install-Module -Name powershell-yaml -Repository PSGallery -Scope CurrentUser -Force
       - name: Run automation script
+        run: .\Automation.ps1
+    defaults:
+      run:
         shell: pwsh
-        run: Set-Location .\scripts; .\Automation.ps1
-        env:
+        working-directory: scripts
+    env:
           GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
           JWT_RB: ${{ secrets.JWT_RB }}
           MS_ID: ${{ secrets.MS_ID }}
