--- a/.github/workflows/pre-validation.yml
+++ b/.github/workflows/pre-validation.yml
@@ -16,26 +16,6 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-      - name: JSON validation
-        run: |
-          $jsonWithError = Get-ChildItem .\packages\ -Recurse -File | Get-Content -Raw | Where-Object { (Test-Json -Json $_ -SchemaFile .\schema.json -ErrorAction SilentlyContinue) -eq $false } | Select-Object -ExpandProperty PSChildName
-          if ($jsonWithError) {
-              Write-Host -ForegroundColor Red $("The following packages have errors:`n  " + $($jsonWithError -join "`n  ")) 
-              exit 1
-          } else {
-              Write-Host -ForegroundColor Green "All packages are valid!"
-          }
-      - if: github.event_name == 'push'
-        name: Update packages.txt
-        run: |
-          (Get-ChildItem .\packages\ -Recurse -File | Get-Content -Raw | Where-Object { Test-Json -Json $_ -SchemaFile .\schema.json -ErrorAction SilentlyContinue } | ConvertFrom-Json | Where-Object { $_.skip -eq $false }).pkgid | Sort-Object | Out-File -Encoding UTF8 -Path .\packages.txt
-          git config --local user.name 'winget-pkgs-automation-bot[bot]'
-          git config --local user.email '93540089+winget-pkgs-automation-bot[bot]@users.noreply.github.com'
-          git commit -m "chore: update packages.txt" -- ./packages.txt
-          git push https://x-access-token:$((Invoke-RestMethod -Method Post -Headers @{Authorization = "Bearer $($env:JWT_RB | ruby)"; Accept = "application/vnd.github.v3+json"} -Uri "https://api.github.com/app/installations/$env:THIS_ID/access_tokens").token)@github.com/vedantmgoyal2009/winget-pkgs-automation.git
-        env:
-          JWT_RB: ${{ secrets.JWT_RB }}
-          THIS_ID: ${{ secrets.THIS_ID }}
       - run: npm install @commitlint/config-conventional --silent
       - if: github.event_name == 'push'
         name: Validate Commit (push)
@@ -45,3 +25,14 @@ jobs:
         name: Validate Commits (pull request)
         shell: bash
         run:  npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+      - if: github.event_name == 'push'
+        name: Update packages.txt
+        run: |
+          # code to update packages.txt
+          # git config --local user.name 'winget-pkgs-automation-bot[bot]'
+          # git config --local user.email '93540089+winget-pkgs-automation-bot[bot]@users.noreply.github.com'
+          # git commit -m "chore: update packages.txt" -- ./packages.txt
+          # git push https://x-access-token:$((Invoke-RestMethod -Method Post -Headers @{Authorization = "Bearer $($env:JWT_RB | ruby)"; Accept = "application/vnd.github.v3+json"} -Uri "https://api.github.com/app/installations/$env:THIS_ID/access_tokens").token)@github.com/vedantmgoyal2009/winget-pkgs-automation.git
+        env:
+          JWT_RB: ${{ secrets.JWT_RB }}
+          THIS_ID: ${{ secrets.THIS_ID }}
