--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -37,15 +37,14 @@ jobs:
           explorer.exe "shell:appsFolder\Microsoft.DesktopAppInstaller_8wekyb3d8bbwe!winget"
           # ----------------------------------------------------
           winget settings --enable LocalManifestFiles
-          Write-Host " Successfully installed winget and enabled local manifests."
+          Write-Output " Successfully installed winget and enabled local manifests."
 
           # Install powershell-yaml, required for YamlCreate.ps1
           Install-Module -Name powershell-yaml -Repository PSGallery -Scope CurrentUser -Force
-          Write-Host "Successfully installed powershell-yaml."
+          Write-Output "Successfully installed powershell-yaml."
       - name: Run automation script
         run: .\Automation.ps1
         env:
           GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
           JWT_RB: ${{ secrets.JWT_RB }}
-          MS_ID: ${{ secrets.MS_ID }}
           THIS_ID: ${{ secrets.THIS_ID }}
