--- a/packages/a/appget.appget.json
+++ b/packages/a/appget.appget.json
@@ -32,5 +32,5 @@
     "AutoUpgrade": false,
     "DeletePreviousVersion": false
   },
-  "SkipPackage": false
+  "SkipPackage": "Package is no longer maintained"
 }
