--- a/.github/workflows/pre-validation.yml
+++ b/.github/workflows/pre-validation.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-      - run: npm install @commitlint/config-conventional --silent
+      - run: npm install @commitlint/config-conventional
       - if: github.event_name == 'push'
         name: Validate Commit (push)
         shell: bash
@@ -27,12 +27,21 @@ jobs:
         run:  npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
       - if: github.event_name == 'push'
         name: Update packages.txt
+        working-directory: scripts
         run: |
-          # code to update packages.txt
-          # git config --local user.name 'winget-pkgs-automation-bot[bot]'
-          # git config --local user.email '93540089+winget-pkgs-automation-bot[bot]@users.noreply.github.com'
-          # git commit -m "chore: update packages.txt" -- ./packages.txt
-          # git push https://x-access-token:$((Invoke-RestMethod -Method Post -Headers @{Authorization = "Bearer $($env:JWT_RB | ruby)"; Accept = "application/vnd.github.v3+json"} -Uri "https://api.github.com/app/installations/$env:THIS_ID/access_tokens").token)@github.com/vedantmgoyal2009/winget-pkgs-automation.git
+          Invoke-Pester -Output Detailed
+          git config --local user.name 'winget-pkgs-automation-bot[bot]'
+          git config --local user.email '93540089+winget-pkgs-automation-bot[bot]@users.noreply.github.com'
+          git commit -m "chore: update packages.txt" -- ../packages.txt
+          git push https://x-access-token:$((Invoke-RestMethod -Method Post -Headers @{Authorization = "Bearer $($env:JWT_RB | ruby)"; Accept = "application/vnd.github.v3+json"} -Uri "https://api.github.com/app/installations/$env:THIS_ID/access_tokens").token)@github.com/vedantmgoyal2009/winget-pkgs-automation.git
         env:
           JWT_RB: ${{ secrets.JWT_RB }}
           THIS_ID: ${{ secrets.THIS_ID }}
+      - uses: codecov/codecov-action@v2
+        with:
+          name: winget-pkgs-automation-codecov
+          directory: ./
+          files: ./coverage.xml
+          working-directory: scripts
+          fail_ci_if_error: true
+          verboose: true
