--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -170,6 +170,18 @@
         "ideas",
         "bug"
       ]
+    },
+    {
+      "login": "vedantmgoyal2009",
+      "name": "Begula",
+      "avatar_url": "https://avatars.githubusercontent.com/u/83997633?v=4",
+      "profile": "https://bittu.eu.org",
+      "contributions": [
+        "bug",
+        "code",
+        "ideas",
+        "review"
+      ]
     }
   ]
 }
