chore(dependabot): update dependabot configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,8 +18,44 @@ updates:
     - "dependencies"
     reviewers:
     - "vedantmgoyal2009"
+    commit-message:
+      prefix: "chore(deps)"
     target-branch: "main"
-  
+
+  # Maintain dependencies for npm
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/docs" # Location of package manifests
+    allow:
+      - dependency-type: production
+      - dependency-type: development
+    schedule:
+      interval: "daily"
+      timezone: "Asia/Kolkata"
+    labels:
+    - "dependencies"
+    reviewers:
+    - "vedantmgoyal2009"
+    commit-message:
+      prefix: "chore(deps)"
+    target-branch: "main"
+
+  # Maintain dependencies for npm
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/docs/functions" # Location of package manifests
+    allow:
+      - dependency-type: production
+      - dependency-type: development
+    schedule:
+      interval: "daily"
+      timezone: "Asia/Kolkata"
+    labels:
+    - "dependencies"
+    reviewers:
+    - "vedantmgoyal2009"
+    commit-message:
+      prefix: "chore(deps)"
+    target-branch: "main"
+
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     # Workflow files stored in the
@@ -32,4 +68,6 @@ updates:
     - "dependencies"
     reviewers:
     - "vedantmgoyal2009"
+    commit-message:
+      prefix: "chore(deps)"
     target-branch: "main"
