--- a/.github/workflows/wpa-pre-validation.yml
+++ b/.github/workflows/wpa-pre-validation.yml
@@ -14,7 +14,7 @@ jobs:
     defaults:
       run:
         shell: pwsh
-        working-directory: winget-pkgs-automation/scripts
+        working-directory: winget-pkgs-automation
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
