--- a/.github/workflows/wpa-automation.yml
+++ b/.github/workflows/wpa-automation.yml
@@ -15,14 +15,21 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.0'
       - name: Install dependencies
         run: |
-          # Install jwt and openssl gems
-          gem install jwt openssl --no-doc
-
+          # Initialize auth.js which will be used by the script to get bot token
+          npm install @octokit/auth-app
+          Write-Output 'async function main() {
+            console.log((await require("@octokit/auth-app").createAppAuth({
+              appId: ${{ secrets.BT_AP_ID }},
+              privateKey: "${{ secrets.BT_AP_PKY }}",
+              clientId: "${{ secrets.BT_CLNT_ID }}",
+              clientSecret: "${{ secrets.BT_CLNT_SCRT }}",
+              installationId: ${{ secrets.BT_INST_ID }},
+            })({ type: "installation" })).token);
+          }
+          main();' | Out-File -FilePath auth.js
+          
           # Install winget and enable local manifests since microsoft/winget-cli#1453 is merged
           Invoke-WebRequest -Uri 'https://aka.ms/Microsoft.VCLibs.x64.14.00.Desktop.appx' -OutFile 'VCLibs.appx'
           Invoke-WebRequest -Uri 'https://github.com/microsoft/winget-cli/releases/download/v1.1.12701/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle' -OutFile 'winget.msixbundle'
@@ -46,5 +53,3 @@ jobs:
         run: .\Automation.ps1
         env:
           GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
-          JWT_RB: ${{ secrets.JWT_RB }}
-          THIS_ID: ${{ secrets.THIS_ID }}
