--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,68 +6,68 @@
 version: 2
 updates:
   # Maintain dependencies for npm
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/winget-releaser" # Location of package manifests
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/winget-releaser' # Location of package manifests
     allow:
       - dependency-type: production
       - dependency-type: development
     schedule:
-      interval: "daily"
-      timezone: "Asia/Kolkata"
+      interval: 'daily'
+      timezone: 'Asia/Kolkata'
     labels:
-    - "dependencies"
+      - 'dependencies'
     reviewers:
-    - "vedantmgoyal2009"
+      - 'vedantmgoyal2009'
     commit-message:
-      prefix: "chore(deps)"
-    target-branch: "main"
+      prefix: 'chore(deps)'
+    target-branch: 'main'
 
   # Maintain dependencies for npm
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/docs" # Location of package manifests
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/docs' # Location of package manifests
     allow:
       - dependency-type: production
       - dependency-type: development
     schedule:
-      interval: "daily"
-      timezone: "Asia/Kolkata"
+      interval: 'daily'
+      timezone: 'Asia/Kolkata'
     labels:
-    - "dependencies"
+      - 'dependencies'
     reviewers:
-    - "vedantmgoyal2009"
+      - 'vedantmgoyal2009'
     commit-message:
-      prefix: "chore(deps)"
-    target-branch: "main"
+      prefix: 'chore(deps)'
+    target-branch: 'main'
 
   # Maintain dependencies for npm
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/docs/functions" # Location of package manifests
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/docs/functions' # Location of package manifests
     allow:
       - dependency-type: production
       - dependency-type: development
     schedule:
-      interval: "daily"
-      timezone: "Asia/Kolkata"
+      interval: 'daily'
+      timezone: 'Asia/Kolkata'
     labels:
-    - "dependencies"
+      - 'dependencies'
     reviewers:
-    - "vedantmgoyal2009"
+      - 'vedantmgoyal2009'
     commit-message:
-      prefix: "chore(deps)"
-    target-branch: "main"
+      prefix: 'chore(deps)'
+    target-branch: 'main'
 
   # Maintain dependencies for GitHub Actions
-  - package-ecosystem: "github-actions"
+  - package-ecosystem: 'github-actions'
     # Workflow files stored in the
     # default location of `.github/workflows`
-    directory: "/"
+    directory: '/'
     schedule:
-      interval: "daily"
-      timezone: "Asia/Kolkata"
+      interval: 'daily'
+      timezone: 'Asia/Kolkata'
     labels:
-    - "dependencies"
+      - 'dependencies'
     reviewers:
-    - "vedantmgoyal2009"
+      - 'vedantmgoyal2009'
     commit-message:
-      prefix: "chore(deps)"
-    target-branch: "main"
+      prefix: 'chore(deps)'
+    target-branch: 'main'
