--- a/winget-pkgs-automation/packages/a/appest.dida.json
+++ b/winget-pkgs-automation/packages/a/appest.dida.json
@@ -9,7 +9,7 @@
     "Body": "",
     "UserAgent": ""
   },
-  "PostResponseScript": "$Response | Out-File -FilePath .\\temp.json; $Response = Get-Content -Path .\\temp.json -Raw | ConvertFrom-Json; Remove-Item -Path .\\temp.json",
+  "PostResponseScript": "$Response = $Response.Replace('ï»¿','') | ConvertFrom-Json",
   "VersionRegex": "[0-9.]+",
   "InstallerRegex": ".(exe|msi|msix|appx)(bundle){0,1}$",
   "PreviousVersion": "4.1.4.0",
