--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,10 @@ jobs:
         run: |
           if [ '${{ github.event_name }}' == 'push' ]; then
             echo "::set-output name=wpa-modified::$(git diff --quiet HEAD HEAD~1 -- winget-pkgs-automation && echo false || echo true)"
-            echo "::set-output name=wr-modified::$(git diff --quiet HEAD HEAD~1 -- winget-releaser && echo false || echo true)"
+            # echo "::set-output name=wr-modified::$(git diff --quiet HEAD HEAD~1 -- winget-releaser && echo false || echo true)"
           else
             echo "::set-output name=wpa-modified::$(git diff --quiet ${{ github.pull_request.base.sha }} ${{ github.pull_request.head.sha }} -- winget-pkgs-automation && echo false || echo true)"
-            echo "::set-output name=wr-modified::$(git diff --quiet ${{ github.pull_request.base.sha }} ${{ github.pull_request.head.sha }} -- winget-releaser && echo false || echo true)"
+            # echo "::set-output name=wr-modified::$(git diff --quiet ${{ github.pull_request.base.sha }} ${{ github.pull_request.head.sha }} -- winget-releaser && echo false || echo true)"
           fi
         id: commit-info
       - name: Commitlint (push)
@@ -96,36 +96,36 @@ jobs:
           working-directory: winget-pkgs-automation
           fail_ci_if_error: false
           verbose: true
-  codeql-analysis:
-    name: CodeQL (analyse)
-    runs-on: ubuntu-latest
-    needs: get-commit
-    if: needs.get-commit.outputs.is-wr-modified == 'true' && (github.event_name == 'push' || github.event_name == 'pull_request')
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['javascript']
-        # language: [ 'java', 'javascript' ] <-- auto-detected, commented manually
-        # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
-        # Learn more about CodeQL language support at https://git.io/codeql-language-support
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      # Initializes the CodeQL tools for scanning.
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
-        with:
-          languages: ${{ matrix.language }}
-      # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-      # If this step fails, then you should remove it and run the build manually (see https://github.com/github/codeql-action)
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v1
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
+  # codeql-analysis:
+  #   name: CodeQL (analyse)
+  #   runs-on: ubuntu-latest
+  #   needs: get-commit
+  #   if: needs.get-commit.outputs.is-wr-modified == 'true' && (github.event_name == 'push' || github.event_name == 'pull_request')
+  #   permissions:
+  #     actions: read
+  #     contents: read
+  #     security-events: write
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       language: ['javascript']
+  #       # language: [ 'java', 'javascript' ] <-- auto-detected, commented manually
+  #       # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
+  #       # Learn more about CodeQL language support at https://git.io/codeql-language-support
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v2
+  #     # Initializes the CodeQL tools for scanning.
+  #     - name: Initialize CodeQL
+  #       uses: github/codeql-action/init@v1
+  #       with:
+  #         languages: ${{ matrix.language }}
+  #     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
+  #     # If this step fails, then you should remove it and run the build manually (see https://github.com/github/codeql-action)
+  #     - name: Autobuild
+  #       uses: github/codeql-action/autobuild@v1
+  #     - name: Perform CodeQL Analysis
+  #       uses: github/codeql-action/analyze@v1
   label:
     name: Label
     if: github.event_name == 'pull_request_target'
