ci(wpa): run automation every 1.5 hour instead of 1 hr
Run automation every 1.5 hour since it is hitting API rate limits and pull requests are not created
on time

--- a/.github/workflows/wpa-automation.yml
+++ b/.github/workflows/wpa-automation.yml
@@ -1,7 +1,8 @@
 name: '[WPA] Automation'
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '00 0-21/3 * * *'
+    - cron: '30 1-22/3 * * *'
   workflow_dispatch:
 jobs:
   build:
