--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,23 @@ version: 2
 updates:
   # Maintain dependencies for npm
   - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    allow:
+      - dependency-type: production
+      - dependency-type: development
+    schedule:
+      interval: 'daily'
+      timezone: 'Asia/Kolkata'
+    labels:
+      - 'dependencies'
+    reviewers:
+      - 'vedantmgoyal2009'
+    commit-message:
+      prefix: 'chore(deps)'
+    target-branch: 'main'
+
+  # Maintain dependencies for npm
+  - package-ecosystem: 'npm' # See documentation for possible values
     directory: '/docs' # Location of package manifests
     allow:
       - dependency-type: production
