--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "doc": "docs"
     },
     "workspaces": [
-        "winget-releaser",
         "docs",
         "docs/functions"
     ],
@@ -34,6 +33,8 @@
     },
     "homepage": "https://github.com/vedantmgoyal2009/vedantmgoyal2009#readme",
     "devDependencies": {
+        "@commitlint/config-conventional": "16.2.1",
+        "commitizen": "^4.2.4",
         "cz-conventional-changelog": "^3.3.0",
         "prettier": "^2.6.0"
     },
@@ -42,6 +43,11 @@
         "tabWidth": 2,
         "semi": false,
         "singleQuote": true
+    },
+    "commitlint": {
+        "extends": [
+            "@commitlint/config-conventional"
+        ]
     },
     "config": {
         "commitizen": {
