chore: update package.json, .gitignore, .prettierignore, dependabot configuration and workflows
- Add package-lock.json
- Update `Get commit information` job to succeed even if commitlint step fails (CI workflow)
- Update dependabot configuration to update npm package depenencies at root level
- Remove winget-releaser references from .gitignore and .prettierignore
- Add commitlint config to package.json and remove commitlint.config.js
- Run `npm run build` for only docs workspace in firebase-docs workflows

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ version: 2
 updates:
   # Maintain dependencies for npm
   - package-ecosystem: 'npm' # See documentation for possible values
-    directory: '/winget-releaser' # Location of package manifests
+    directory: '/' # Location of package manifests
     allow:
       - dependency-type: production
       - dependency-type: development
