--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       is-wpa-modified: ${{ steps.commit-info.outputs.wpa-modified }}
-      is-wr-modified: ${{ steps.commit-info.outputs.wr-modified }}
+      is-docs-modified: ${{ steps.commit-info.outputs.docs-modified }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -36,10 +36,10 @@ jobs:
         run: |
           if [ '${{ github.event_name }}' == 'push' ]; then
             echo "::set-output name=wpa-modified::$(git diff --quiet HEAD HEAD~1 -- winget-pkgs-automation && echo false || echo true)"
-            # echo "::set-output name=wr-modified::$(git diff --quiet HEAD HEAD~1 -- winget-releaser && echo false || echo true)"
+            echo "::set-output name=docs-modified::$(git diff --quiet HEAD HEAD~1 -- docs && echo false || echo true)"
           else
             echo "::set-output name=wpa-modified::$(git diff --quiet ${{ github.pull_request.base.sha }} ${{ github.pull_request.head.sha }} -- winget-pkgs-automation && echo false || echo true)"
-            # echo "::set-output name=wr-modified::$(git diff --quiet ${{ github.pull_request.base.sha }} ${{ github.pull_request.head.sha }} -- winget-releaser && echo false || echo true)"
+            echo "::set-output name=docs-modified::$(git diff --quiet ${{ github.pull_request.base.sha }} ${{ github.pull_request.head.sha }} -- docs && echo false || echo true)"
           fi
         id: commit-info
   winget-pkgs-automation:
@@ -96,6 +96,98 @@ jobs:
           working-directory: winget-pkgs-automation
           fail_ci_if_error: false
           verbose: true
+  build-docs-and-deploy:
+    name: Deploy to Firebase Hosting on merge
+    if: needs.get-commit.outputs.is-docs-modified == 'true' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - run: npm ci && npm run build --workspace=docs
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          entryPoint: './docs'
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_URLSHORTENER_51B07 }}'
+          channelId: live
+          projectId: urlshortener-51b07
+  preview-docs-pull-request:
+    name: Deploy to Firebase Hosting on PR
+    runs-on: ubuntu-latest
+    if: needs.get-commit.outputs.is-docs-modified == 'true' && github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - run: npm ci && npm run build --workspace=docs
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          expires: 1h
+          entryPoint: './docs'
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_URLSHORTENER_51B07 }}'
+          projectId: urlshortener-51b07
+  label:
+    name: Label
+    if: github.event_name == 'pull_request_target'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Authenticate GitHub Bot
+        run: |
+          npm install @octokit/auth-app
+          echo 'async function main() {
+            console.log((await require("@octokit/auth-app").createAppAuth({
+              appId: ${{ secrets.BT_AP_ID}},
+              privateKey: "${{ secrets.BT_AP_PKY }}",
+              clientId: "${{ secrets.BT_CLNT_ID }}",
+              clientSecret: "${{ secrets.BT_CLNT_SCRT }}",
+              installationId: ${{ secrets.BT_INST_ID }},
+            })({ type: "installation" })).token);
+          }
+          main();' > auth.js
+          echo "::set-output name=token::$(node auth.js)"
+        id: auth
+      - uses: actions/labeler@v4.0.0
+        with:
+          repo-token: ${{ steps.auth.outputs.token }}
+          configuration-path: '.github/labeler.yml'
+          sync-labels: true
+  greeting:
+    name: Greeting
+    if: github.event_name == 'issues' || github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
+    steps:
+      - name: Authenticate GitHub Bot
+        run: |
+          npm install @octokit/auth-app
+          echo 'async function main() {
+            console.log((await require("@octokit/auth-app").createAppAuth({
+              appId: ${{ secrets.BT_AP_ID}},
+              privateKey: "${{ secrets.BT_AP_PKY }}",
+              clientId: "${{ secrets.BT_CLNT_ID }}",
+              clientSecret: "${{ secrets.BT_CLNT_SCRT }}",
+              installationId: ${{ secrets.BT_INST_ID }},
+            })({ type: "installation" })).token);
+          }
+          main();' > auth.js
+          echo "::set-output name=token::$(node auth.js)"
+        id: auth
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ steps.auth.outputs.token }}
+          issue-message: 'Hello @${{ github.actor }}, thank you for submitting an issue!'
+          pr-message: 'Hello @${{ github.actor }}, thank you submitting a pull request!'
   # codeql-analysis:
   #   name: CodeQL (analyse)
   #   runs-on: ubuntu-latest
@@ -126,59 +218,3 @@ jobs:
   #       uses: github/codeql-action/autobuild@v1
   #     - name: Perform CodeQL Analysis
   #       uses: github/codeql-action/analyze@v1
-  label:
-    name: Label
-    if: github.event_name == 'pull_request_target'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-    steps:
-      - name: Authenticate GitHub Bot
-        run: |
-          npm install @octokit/auth-app
-          echo 'async function main() {
-            console.log((await require("@octokit/auth-app").createAppAuth({
-              appId: ${{ secrets.BT_AP_ID}},
-              privateKey: "${{ secrets.BT_AP_PKY }}",
-              clientId: "${{ secrets.BT_CLNT_ID }}",
-              clientSecret: "${{ secrets.BT_CLNT_SCRT }}",
-              installationId: ${{ secrets.BT_INST_ID }},
-            })({ type: "installation" })).token);
-          }
-          main();' > auth.js
-          echo "::set-output name=auth-token::$(node auth.js)"
-        id: auth
-      - uses: actions/labeler@v4.0.0
-        with:
-          repo-token: ${{ steps.auth.outputs.token }}
-          configuration-path: '.github/labeler.yml'
-          sync-labels: true
-  greeting:
-    name: Greeting
-    if: github.event_name == 'issues' || github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-    steps:
-      - name: Authenticate GitHub Bot
-        run: |
-          npm install @octokit/auth-app
-          echo 'async function main() {
-            console.log((await require("@octokit/auth-app").createAppAuth({
-              appId: ${{ secrets.BT_AP_ID}},
-              privateKey: "${{ secrets.BT_AP_PKY }}",
-              clientId: "${{ secrets.BT_CLNT_ID }}",
-              clientSecret: "${{ secrets.BT_CLNT_SCRT }}",
-              installationId: ${{ secrets.BT_INST_ID }},
-            })({ type: "installation" })).token);
-          }
-          main();' > auth.js
-          echo "::set-output name=auth-token::$(node auth.js)"
-        id: auth
-      - uses: actions/first-interaction@v1
-        with:
-          repo-token: ${{ steps.auth.outputs.token }}
-          issue-message: 'Hello @${{ github.actor }}, thank you for submitting an issue!'
-          pr-message: 'Hello @${{ github.actor }}, thank you submitting a pull request!'
